--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,13 @@ header {
 /* #region HERO */
 .hero {
   background-color: #2e2f42;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7)),
+    url(/images/office-image.png);
+
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
   width: 100%;
   padding: 188px 0;
 }
