--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,7 @@ header {
 
   width: 100%;
   padding: 188px 0;
+  max-width: 1440px;
 }
 .hero-title {
   font-weight: 700;
@@ -194,6 +195,10 @@ header {
   gap: 24px;
 }
 
+.features-item {
+  flex-basis: calc((100% - 72px) / 4);
+}
+
 /* style for naming of section Features, Portfolio */
 .features-title,
 .portfolio-name,
@@ -217,8 +222,16 @@ header {
   letter-spacing: 0.02em;
 }
 
-.features-item {
-  flex-basis: calc((100% - 72px) / 4);
+.features-container {
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background: #f4f4fd;
+  margin-bottom: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* SECTION TEAM */
