working with footer

--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,36 @@ footer {
   line-height: 1.5;
   color: #f4f4fd;
   letter-spacing: 0.02em;
-
   max-width: 264px;
+}
+
+.footer-social-container {
+}
+
+.footer-social-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+}
+
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-social-item {
+  display: flex;
+}
+
+.footer-social-link {
+}
+
+.footer-social-icon {
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
 }
 /* #endregion */
