--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ header {
   align-items: center;
 }
 
+/* fixed size of all global containers in all sections */
 .container {
   max-width: 1158px;
   margin: 0 auto;
@@ -87,12 +88,46 @@ header {
   color: #404bbf;
   text-decoration: underline;
 }
+
+/* підкреслення */
 .nav-items {
+  /* псевдоелемент прив’язаний */
+  position: relative;
   text-decoration: none;
   color: #2e2f42;
   letter-spacing: 0.02em;
   padding: 24px 0;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.nav-items::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  /* лінія під текстом */
+  bottom: 0;
+  /* початково невидима */
+  width: 0;
+  /* товщина підкреслення */
+  height: 4px;
+  /* колір лінії */
+  background-color: #404bbf;
+  border-radius: 2px;
+  transition: width 0.3s ease;
+}
+
+.nav-items:hover::after,
+.nav-items:focus::after {
+  /* ефект наводження */
+  width: 100%;
+}
+
+.nav-items.current::after {
+  /* завжди активна лінія для поточної сторінки */
+  width: 100%;
+}
+/* _________ */
 
 .contact-header {
   font-style: normal;
@@ -110,6 +145,8 @@ header {
   line-height: 1.5;
   text-decoration: none;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-header:hover {
@@ -167,6 +204,8 @@ header {
   border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgb(0 0 0 / 15%);
   cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover {
@@ -297,7 +336,53 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+/* change link color */
+.team-link:hover {
+  background-color: #404bbf;
+}
+/* контейнер для overlay */
+.info-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  /* позиція контенту*/
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  /* стиль тексту */
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+
+  /* внутрішні відступи тексту */
+  padding-top: 40px;
+  padding-right: 32px;
+  padding-left: 32px;
+
+  /* зміщення на 100% в ліво */
+  transform: translateY(100%);
+
+  /* анімація */
+  transition: transform 250ms ease-in-out;
+}
+
+.info-box:hover .overlay {
+  /* зміщення контенту на 0 */
+  transform: translateX(0);
+}
+
 /* PORTFOLIO SECTION */
 .portfolio-img {
   padding: 0 auto;
@@ -318,6 +403,15 @@ header {
   flex-wrap: wrap;
   row-gap: 48px;
   margin-bottom: 0;
+}
+
+/* added for HomeWork 4 */
+.portfolio-item:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* #endregion */
@@ -396,6 +490,12 @@ footer {
   /* застосування 100% ширини заданої для кнопки 40px */
   width: 100%;
   height: 100%;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-link:hover {
+  background-color: #31d0aa;
 }
 
 .footer-social-icon {
