--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ header {
   transform: translateY(100%);
 
   /* анімація */
-  transition: transform 250ms ease-in-out;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .info-box:hover .overlay {
