--- a/css/style.css
+++ b/css/style.css
@@ -116,8 +116,8 @@ header {
   left: 0;
   /* лінія під текстом */
   bottom: 0;
-  /* початково невидима */
-  width: 0;
+  /* початково невидима width 0 */
+  width: 100%;
   /* товщина підкреслення */
   height: 4px;
   /* колір лінії */
@@ -180,7 +180,7 @@ header {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(/images/office-image.png);
+    url(../images/office-image.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
