--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ header {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link::after {
+.nav-link.studio::after {
   content: "";
   position: absolute;
   left: 0;
@@ -130,12 +130,6 @@ header {
 .nav-link:hover::after,
 .nav-link:focus::after {
   /* ефект наводження */
-  width: 100%;
-  bottom: -1px;
-}
-
-.nav-link.current::after {
-  /* завжди активна лінія для поточної сторінки */
   width: 100%;
   bottom: -1px;
 }
