--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ header {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.info-box:hover .overlay {
+.portfolio-item:hover .overlay {
   /* зміщення контенту на 0 */
   transform: translateX(0);
 }
